--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.13.0",
     "core-js": "^3.8.3",
-    "nuxt": "^2.14.12"
+    "nuxt": "^2.14.12",
+    "vue-router": "3"
   },
   "devDependencies": {
     "@nuxtjs/vuetify": "^1.11.3",
