--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
-    "generate": "nuxt generate"
+    "generate": "nuxt generate",
+    "test": "jest"
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.0",
@@ -16,11 +17,16 @@
   },
   "devDependencies": {
     "@nuxtjs/vuetify": "^1.11.3",
+    "@vue/test-utils": "v1.3.3",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-jest": "^29.5.0",
     "fibers": "^5.0.0",
     "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
     "pug": "^3.0.0",
     "pug-plain-loader": "^1.1.0",
     "sass": "^1.32.6",
-    "sass-loader": "^10.1.1"
+    "sass-loader": "^10.1.1",
+    "vue-jest": "^3.0.7"
   }
 }
